--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -5,11 +5,11 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownService" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdownService">
-      <a class="dropdown-item" href="{% url 'service:filesync' %}" rel="noreferrer">File synchronization</a>
-      <a class="dropdown-item" href="{% url 'service:versioncontrol' %}" rel="noreferrer">Version control</a>
+      <a class="dropdown-item" href="{% url 'service:filesync' %}" rel="noreferrer">Synchronized Files</a>
+      <a class="dropdown-item" href="{% url 'service:versioncontrol' %}" rel="noreferrer">Repositories</a>
       <hr>
-      <a class="dropdown-item" href="/gitea/user/oauth2/kooplex-test" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
       <a class="dropdown-item" href="/seafile/" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Seafile</span></a>
+      <a class="dropdown-item" href="/gitea/user/oauth2/kooplex-fiek-gitea" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
     </div>
   </li>
 
