--- a/kooplexhub/hub/templates/service/filesynchronization.html
+++ b/kooplexhub/hub/templates/service/filesynchronization.html
@@ -50,31 +50,37 @@ a.active {
 
 {% block main_content_left %}
   <form id="fsFilterLibForm" class="form-horizontal form-control" action="{% url 'service:fs_search' %}" method="post">
-    <h5>Search library</h5>
     {% csrf_token %}
     <div  class="alert alert-warning">
       <input type="text" name="library" placeholder="library" value="{{ search_library }}">
       <button type="submit" class="btn btn-primary" name="button" value="apply"> Search</button>
     </div>
-    <div class="modal-footer">
-      Currently connected apps:
-      <img src="/static/content/logos/seafile.png" alt="SeaFile" height="50px">
-    </div>
   </form>
 {% endblock %}
 
 {% block main_content_center %}
+  <h2>Connected services</h2>
+  <!-- We should organize into tabs each service -->
   <form id="fsRefreshLibForm" class="form-horizontal form-control">
-    <h5>Refresh your library list</h5>
-    <div  class="alert alert-warning">
-      {% for t in fs_tokens %}
-        <a href="{% url 'service:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">{{ t.syncserver.url }}</a> <br style="margin:1ex">
-      {% endfor %}
-    </div>
+	  <h3>   <img src="/static/content/logos/seafile.png" alt="SeaFile" height="50px"> </h3>
+          {% for t in fs_tokens %}
+          <div class="card bg-light mb-3">
+              <div class="card-header">
+                 <div class="row">
+                      <div class="col-10">
+       		       <h4>{{ t.syncserver.url }}</h4> (Last updated: {{ t.last_used }})
+                      </div>
+                      <div class="col-2">
+                         <a href="{% url 'service:fs_refresh' t.id %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="Last updated: {{ t.last_used }}" data-placement="top">Refresh</a> <br style="margin:1ex">
+                      </div>
+                 </div>
+              </div>
+          </div>
+          {% endfor %}
   </form>
   {% load render_table from django_tables2 %}
   <form id="fsSyncForm" class="form-horizontal form-control" action="{% url 'service:commit_sync' %}" method="post">
-    <h5>Select libraries to synchronize</h5>
+  <h3> Libraries to synchronize</h3>
     {% csrf_token %}
     {% render_table tbl_libraries %}
     <div class="modal-footer">
