--- a/kooplexhub/hub/templates/usertokens.html
+++ b/kooplexhub/hub/templates/usertokens.html
@@ -9,21 +9,41 @@
 {% endblock %}
 
 {% block main_content_center %}
-<h2> Service Tokens</h2>
+  <h2 class="card-title">Service Tokens</strong>  </h2>
 <form class="form-horizontal" action="{% url 'user:managetokens' next_page %}" method="post">
   {% csrf_token %}
-<h4> Notebook servers</h4>
-  <p>You can request a new token to access your notebook servers:
-    <button class="btn btn-danger" name="button" value="reset_notebook_token">Reset token</button>
-  </p>
-<h4> Seafile</h4>
-<p> In order to start using Seafile services: 
-<ul>
-	<li>First you need to <a href="/seafile/" rel="noreferrer" target="blank">login to Seafile <span class="oi oi-external-link" aria-hidden="true"></a></li>
-	<li>Second you needto create a new token to access seafile server:
-		<button class="btn btn-danger" name="button" value="reset_seaf_token">New/Reset token</button></li>
-</ul>
-  </p>
+   <div class="card bg-light mb-3">
+       <div class="card-header">
+          <h4> Notebook servers</h4>
+          <div class="row">
+             <div class="col-10">
+                <p>You can request a new token to access your notebook servers:
+                </p>
+             </div>
+             <div class="col-2">
+                <button class="btn btn-danger" name="button" value="reset_notebook_token">Reset token</button>
+             </div>
+          </div>
+       </div>
+   </div>
+   <div class="card bg-light mb-3">
+       <div class="card-header">
+          <h4> Seafile</h4>
+          <div class="row">
+             <div class="col-10">
+                <p> In order to start using Seafile services: 
+                <ul>
+                	<li>First you need to <a href="/seafile/" rel="noreferrer" target="blank">login to Seafile <span class="oi oi-external-link" aria-hidden="true"></a></li>
+                	<li>Second you need to create a new token to access seafile server:</li>
+                </ul>
+                  </p>
+             </div>
+             <div class="col-2">
+             	<button class="btn btn-danger" name="button" value="reset_seaf_token">New/Reset token</button>
+             </div>
+          </div>
+       </div>
+   </div>
 <h2> Version control Tokens</h2>
 <ul>
 	<li><a href="{{ url_manual }}/ExternalComponents/index.html">How to create token? <span class="oi oi-external-link" aria-hidden="true"></a></li>
