--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -9,7 +9,7 @@
       <a class="dropdown-item" href="{% url 'service:versioncontrol' %}" rel="noreferrer">Repositories</a>
       <hr>
       <a class="dropdown-item" href="/seafile/" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Seafile</span></a>
-      <a class="dropdown-item" href="/gitea/user/oauth2/kooplex-fiek-gitea" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
+      <a class="dropdown-item" href="/gitea/user/login" rel="noreferrer" target="blank"><span class="oi oi-external-link" aria-hidden="true"> Gitea</span></a>
     </div>
   </li>
 
