--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -35,11 +35,11 @@
 {% block main_content_left %}
 <div class="card">
      <div class="card-body">
-        <h5 class="card-title">Notebook resources:</h5>
+        <h5 class="card-title">Resources:</h5>
 	<table class="table table-hover table-sm">
            <thead>
                <tr class="table-active">
-                 <th scope="col">Node #</th>
+                 <th scope="col">Project</th>
                  <th scope="col">CPU</th>
                  <th scope="col">Memory</th>
                  <th scope="col"># Notebooks</th>
@@ -47,48 +47,15 @@
              </thead>
              <tbody>
                <tr>
-                 <th scope="row">kooplex-cn1</th>
-                 <td>5/<strong>16</strong></td>
-                 <td>10%</td>
-                 <td>14</td>
-               </tr>
-               <tr>
-                 <th scope="row">kooplex-cn2</th>
-                 <td>16/<strong>16</strong></td>
-                 <td>79%</td>
-                 <td>4</td>
-               </tr>
-               <tr>
-                 <th scope="row">kooplex-cn3</th>
-                 <td>3/<strong>24</strong></td>
-                 <td>67%</td>
-                 <td>2</td>
+                 <th scope="row"></th>
+                 <td>/<strong>48</strong></td>
+                 <td>%</td>
+                 <td></td>
                </tr>
              </tbody>
         </table>
    </div>
 
-     <div class="card-body">
-        <h5>Computing resources:</h5>
-	<table class="table table-hover table-sm">
-           <thead class="f">
-               <tr class="table-active">
-                 <th scope="col">Node #</th>
-                 <th scope="col">CPU</th>
-                 <th scope="col">Memory</th>
-                 <th scope="col"># jobs</th>
-               </tr>
-             </thead>
-             <tbody>
-               <tr>
-                 <th scope="row">kooplex-cn16</th>
-                 <td>36/48</td>
-                 <td>124 GB / 256 GB</td>
-                 <td>14</td>
-               </tr>
-             </tbody>
-        </table>
-   </div>
 </div>
 {% endblock %}
 
