--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -67,6 +67,7 @@
          <div class="row">Powered by</div>
          <div class="row">
           <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
+          <img src="/static/content/kuberneteslogo.png" style="height: 40px; padding-right: 10px" alt="k8s">
           <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
           <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
           <img src="/static/content/rstudio.png" style="height: 40px; padding-right: 10px" alt="rstudio">
