--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -4,7 +4,7 @@
     <div class="card-header" id="heading-{{ course.id }}">
           <div class="row">
                   <div class="col-8">
-                          {% include 'container/startopen.html' %}
+                         {% include 'project/startopen.html' %}
                           <button class="btn btn-outline-dark fas btn-link collapsed" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}" style="min-width: 15em; text-align: left;">
                                <strong>{{ project.name }}</strong>
                           </button>
@@ -20,15 +20,14 @@
                          {% endif %}
                          <a href="{% url 'project:hide' project.id next_page %}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="You can hide {{ project.name }} from your list." data-placement="top">
                          <span class="oi oi-eye" aria-hidden="true"></span></a>
-                          {% include 'container/stopremove.html' %}
-                          {% include 'container/containerstatus.html' %}
-                          <button class="btn" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}" style="float: right;">
+                          <button class="btn" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}">
                           {% if container.is_running  %}
                                <span class="badge badge-pill badge-success">Using image:<strong>{{ project.image }}</strong></span>
                           {% else %}
                                <span class="badge badge-pill badge-secondary">Using image:<strong>{{ project.image }}</strong></span>
                           {% endif %}
                           </button>
+		          {% include 'project/stopremove.html' %}
                   </div> <!-- col -->
           </div>
     </div> <!-- card header -->
