--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -1,19 +1,11 @@
-{% if container %}
-  {% if container.is_running %}
-     <a href="{% url 'container:stop' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Stop container">
-       <span class="oi oi-x" aria-hidden="true"></span></a>
-  {% elif container.is_stopped %}
-     <a href="{% url 'container:remove' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Remove container">
+{% if container.state == container.ST_RUNNING %}
+   <a href="{% url 'container:stop' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Stop environment {{ container.name }}">
+     <span class="oi oi-x" aria-hidden="true"></span></a>
+{% elif container.state == container.ST_ERROR %}
+   <a href="{% url 'container:stop' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Clean up resources of environment {{ container.name }}">
        <span class="oi oi-fire" aria-hidden="true"></span></a>
-  {% elif menu_container %}
-     <a href="{% url 'container:destroy' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Delete container definition (needed in case of some updates)">
-       <span class="oi oi-trash" aria-hidden="true"></span></a>
-  {% else %}
-     <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Stop container">
-       <span class="oi oi-link-broken" aria-hidden="true"></span></a>
-  {% endif %}
 {% else %}
-     <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Remove container">
-       <span class="oi oi-link-broken" aria-hidden="true"></span></a>
+   <a href="#" role="button" class="btn btn-default disabled" style="padding: 3px 6px 6px 6px; float: right;">
+     <span class="oi oi-link-broken" aria-hidden="true"></span></a>
 {% endif %}
 
