--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -33,30 +33,8 @@
 {% endblock %}
 
 {% block main_content_left %}
-<div class="card">
-     <div class="card-body">
-        <h5 class="card-title">Resources:</h5>
-	<table class="table table-hover table-sm">
-           <thead>
-               <tr class="table-active">
-                 <th scope="col">Project</th>
-                 <th scope="col">CPU</th>
-                 <th scope="col">Memory</th>
-                 <th scope="col"># Notebooks</th>
-               </tr>
-             </thead>
-             <tbody>
-               <tr>
-                 <th scope="row"></th>
-                 <td>/<strong>48</strong></td>
-                 <td>%</td>
-                 <td></td>
-               </tr>
-             </tbody>
-        </table>
-   </div>
-
-</div>
+<iframe src="https://kooplex-fiek.elte.hu/grafana/d-solo/GSx3U1SMz/memory?orgId=1&panelId=4" width="330" height="200" frameborder="0"></iframe>
+<iframe src="https://kooplex-fiek.elte.hu/grafana/d-solo/GSx3U1SMz/memory?orgId=1&theme=light&panelId=2" width="330" height="600" frameborder="0"></iframe>
 {% endblock %}
 
 {% block main_content_center %}
