--- a/kooplexhub/hub/templates/usertokens.html
+++ b/kooplexhub/hub/templates/usertokens.html
@@ -28,7 +28,7 @@
    </div>
    <div class="card bg-light mb-3">
        <div class="card-header">
-          <h4> Seafile</h4>
+          <h4><img src="/static/content/logos/seafile.png" alt="SeaFile" height="50px"></h4>
           <div class="row">
              <div class="col-10">
                 <p> In order to start using Seafile services: 
