--- a/kooplexhub/hub/templates/project/list.html
+++ b/kooplexhub/hub/templates/project/list.html
@@ -33,8 +33,10 @@
 {% endblock %}
 
 {% block main_content_left %}
+{% comment %}
 <iframe src="https://kooplex-fiek.elte.hu/grafana/d-solo/GSx3U1SMz/memory?orgId=1&panelId=4" width="330" height="200" frameborder="0"></iframe>
 <iframe src="https://kooplex-fiek.elte.hu/grafana/d-solo/GSx3U1SMz/memory?orgId=1&theme=light&panelId=2" width="330" height="600" frameborder="0"></iframe>
+{% endcomment %}
 {% endblock %}
 
 {% block main_content_center %}
