--- a/kooplexhub/hub/templates/container/stopremove.html
+++ b/kooplexhub/hub/templates/container/stopremove.html
@@ -1,4 +1,7 @@
-{% if container.state == container.ST_RUNNING %}
+{% if container.proxies|length == 0 %}
+  <a href="#" role="button" class="btn btn-warning" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Missing proxy {{ container.name }}">
+    <span class="oi oi-x" aria-hidden="true"></span></a>
+{% elif container.state == container.ST_RUNNING %}
    <a href="{% url 'container:stop' container.id next_page %}" role="button" class="btn btn-danger" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Stop environment {{ container.name }}">
      <span class="oi oi-x" aria-hidden="true"></span></a>
 {% elif container.state == container.ST_ERROR %}
