--- a/kooplexhub/hub/templates/project/stopremove.html
+++ b/kooplexhub/hub/templates/project/stopremove.html
@@ -1,4 +1,6 @@
-{% if project.containers|length == 1 %}
+{% if project.containers|length == 0 %}
+  <a href="#" role="button" class="btn btn-warning" style="padding: 3px 6px 6px 6px; float: right;" data-toggle="tooltip" title="Missing environment"><span class="oi oi-x" aria-hidden="true"></span></a>
+{% elif project.containers|length == 1 %}
   {% include 'container/stopremove.html' with container=project.containers|first %}
 {% else %}
   <div class="btn-group" style="padding: 3px 6px 6px 6px; float: right;">
@@ -25,4 +27,3 @@
     {% endwith %}
   </div>
 {% endif %}
-
